fix: modern tempalte colors not showing:

--- a/src/templates/modernTemplate/ModernTemplate.module.css
+++ b/src/templates/modernTemplate/ModernTemplate.module.css
@@ -357,7 +357,6 @@
   .templateContainer .resumeSidebar * {
     -webkit-print-color-adjust: exact;
     print-color-adjust: exact;
-    background: transparent;
   }
 
   .templateContainer .sidebarSection {
